--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,49 @@ a {
   color: #fff;
   padding: 7px 20px;
   cursor: pointer;
+  border-radius: 3px;
 }
 .btn:hover {
   background: #666;
+}
+
+.inputForm {
+  background: transparent;
+  border: 0;
+  border-bottom: 1px solid;
+  padding: 1em 0 0.8em;
+  text-align: left;
+  font-size: 15px;
+  font-family: inherit;
+  font-weight: 300;
+  line-height: 1.5;
+  color: inherit;
+  outline: none;
+}
+blockquote {
+  font-size: 16px;
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 5em 10px;
+  padding: 0 10px;
+  quotes: '\201C''\201D''\2018''\2019';
+  padding: 10px 20px;
+  line-height: 1.4;
+}
+blockquote:before {
+  content: open-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  left: -10px;
+  position: relative;
+  top: 30px;
+  color: #ccc;
+  font-size: 3em;
+}
+footer {
+  margin: 0;
+  text-align: right;
+  font-size: 1em;
+  font-style: italic;
 }
